# anyplayer

./: .gitignore  README.md  README.rst  demo.py  pyproject.toml  requirements_dev.txt  test.py  test.sh  test_example.py  test_src.py  tests_conda.sh  tests_venv.sh
src/anyplayer/: __init__.py  dicts.py  p_auto.py  p_cl.py  p_player.py  p_process.py  player_aplay.py  player_cmus.py  player_elisa.py  player_ffplay.py  player_filemgr.py  player_gst.py  player_mpg123.py  player_mpv.py  player_playsound.py  player_pyaudio.py  player_pydub.py  player_simpleaudio.py  player_vlc.py  players.py  utils.py
