[project]
name = "anyplayer"
version = "0.0.6"
description = "play audio in any available way"
readme = "README.rst"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["audio"]

authors = [{name = "userElaina", email = "userelaina@pm.me"}]
maintainers = [{name = "userElaina", email = "userelaina@pm.me"}]

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3"
]

dependencies = []

[project.optional-dependencies]
simpleaudio = ["simpleaudio"]
pyaudio = ["pyaudio"]
playsound = ["pygobject", "playsound2"]
dev = ["simpleaudio", "pyaudio", "playsound2"]

[project.urls]
"Homepage" = "https://github.com/userElaina/anyplayer"
"Bug Reports" = "https://github.com/userElaina/anyplayer/issues"
"Source" = "https://github.com/userElaina/anyplayer"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
