[project]
name = "anyplayer"
version = "0.0.7"
description = "A simple, minimal-hassle, few-dependency Python audio playback solution"
readme = "README.rst"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["audio"]

authors = [{name = "userElaina", email = "userelaina@pm.me"}]
maintainers = [{name = "userElaina", email = "userelaina@pm.me"}]

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3"
]

dependencies = []

[project.optional-dependencies]
dev = ["simpleaudio", "pyaudio", "playsound3"]

[project.urls]
"Homepage" = "https://github.com/userElaina/anyplayer"
"Bug Reports" = "https://github.com/userElaina/anyplayer/issues"
"Source" = "https://github.com/userElaina/anyplayer"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
